5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1635_2445.log
== TEST (2019-04-07 23:45:46) 
-- CODE:
escala = input(" Digite a escala ")
Var1 = float(input())
C = 5/9*(F - 32)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 23:46:11) 
-- CODE:
escala = input(" Digite a escala ")
Var1 = float(input(" Digite a temperatura "))
C = 5/9*(F - 32)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 23:47:18) 
-- CODE:
C = input(" Digite a escala ")
F = float(input(" Digite a temperatura "))
C = 5/9*(F - 32)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:20:49) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
C = 5/9*(F - 32)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:24:36) 
-- CODE:
C = 5/9*(F - 32)
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:24:44) 
-- CODE:
C = 5/9*(F - 32)
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:24:59) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
C = 5/9*(F - 32)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:25:08) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
C = 5/9*(F - 32)



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:41) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
C = 5/9*(F - 32)
if( escala == (C = 5/9*(F - 32) )
	print(C)


-- ERROR:
File "XXXX", line 4
    if( escala == (C = 5/9*(F - 32) )
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:32:51) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
C = 5/9*(F - 32)
if( escala == 5/9*(F - 32) )
	print(C)


-- ERROR:
File "XXXX", line 4
    if( escala == 5/9*(F - 32) )
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:33:26) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
C = 5/9*(F - 32)
if( escala == 5/9*(F - 32) )
	print(C)


-- ERROR:
File "XXXX", line 4
    if( escala == 5/9*(F - 32) )
                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:33:44) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
C = 5/9*(F - 32)
if ( escala == 5/9*(F - 32) ):
	print(C)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:06) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
C = 5/9*(F - 32)
if ( escala == 5/9*(F - 32) ):
	print(C)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:34:20) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( escala == 5/9*(F - 32) ):
	print(C)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( escala == 5/9*(F - 32) ):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:38:20) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( temperatura == 5/9*(F - 32)):
	print(C)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( temperatura == 5/9*(F - 32)):
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:39:01) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( temperatura == (5/9*(F - 32)):




-- ERROR:
File "XXXX", line 3
    if ( temperatura == (5/9*(F - 32)):
                                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:56:03) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( temperatura == 5/9*(F - 32)
	 print(C)
	 




-- ERROR:
File "XXXX", line 4
    print(C)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:56:45) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( temperatura == 5/9*(F - 32):
	 C = 

	 




-- ERROR:
File "XXXX", line 3
    if ( temperatura == 5/9*(F - 32):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:21:04) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( temperatura == 5/9*(F - 32):
	 C = 

	 




-- ERROR:
File "XXXX", line 3
    if ( temperatura == 5/9*(F - 32):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:21:17) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))


	 




-- ERROR:
File "XXXX", line 3
    if ( temperatura == 5/9*(F - 32):
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:27:07) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( C == 5/9*(F - 32) ):
	print(C)


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( C == 5/9*(F - 32) ):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:27:29) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( C == (5/9*(F - 32) )):
	print(C)


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( C == (5/9*(F - 32) )):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 17:27:50) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( C == 5/9*(F - 32) ):
	print(C)


	 




-- EXECUTION TIME:
0.140532
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    if ( C == 5/9*(F - 32) ):
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 17:27:52) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( C == 5/9*(F - 32) ):
	print(C)


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( C == 5/9*(F - 32) ):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:32:33) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( C == temperatura ):
	C = 5/9*(F - 32) 
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( C == temperatura ):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:33:16) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( C == temperatura ):
	C = 5/9*(F - 32) 
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if ( C == temperatura ):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:35:07) 
-- CODE:
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( C = temperatura ):
	C = 5/9*(F - 32) 
	
	
	


	 




-- ERROR:
File "XXXX", line 3
    if ( C = temperatura ):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:42:23) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if ( C == temperatura ):
	C = 5/9*(F - 32) 
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:09:26) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == C ):
	C = 5/9*(F - 32) 
	print(c)

else:
	F = 9/5*(C+32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:10:09) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = 5/9*(F - 32) 
	print(c)

else:
	F = 9/5*(C+32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:10:35) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	"C = 5/9*(F - 32)" 
	print(c)

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:10:47) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	"C = 5/9*(F - 32)" 
	print(C)

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:11:05) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	"C = 5/9*(F - 32)" 
	print("C")

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:11:15) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	"C = 5/9*(F - 32)" 
	print("C")

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:13:11) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	print"C = 5/9*(F - 32)" 
	

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
File "XXXX", line 5
    print"C = 5/9*(F - 32)" 
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:13:23) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	print("C = 5/9*(F - 32)") 
	

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:14:15) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	print("C" = 5/9*(F - 32)") 
	

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
File "XXXX", line 5
    print("C" = 5/9*(F - 32)") 
                              ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:16:05) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = 5/9*(F - 32)
	print(C)

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:17:17) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = "C = 5/9*(F - 32)"
	print(C)

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:17:26) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = "C = 5/9*(F - 32)"
	print(C)

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:19:25) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = "C = 5/9*(F - 32)"
	print(C)

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:19:31) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = "C = 5/9*(F - 32)"
	print(C)

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 15:19:42) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = "C = 5/9*(F - 32)"
	print(C)

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- EXECUTION TIME:
0.140265
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:19:45) 
-- CODE:
opcao = input("C / F?")
escala = input(" Digite a escala ")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = "C = 5/9*(F - 32)"
	print(C)

else:
	"F = 9/5*(C+32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    temperatura = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:22:18) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = 5/9*(F - 32)
	print(C)

else:
	F = "F = 9/5*(C + 32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:22:30) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	"C = 5/9*(F - 32)"
	print(C)

else:
	F = "F = 9/5*(C + 32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(C)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:22:43) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	"C = 5/9*(F - 32)"
	print("C")

else:
	F = "F = 9/5*(C + 32)"
	print(F)
	
	
	


	 




-- OUTPUT:
C
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:23:03) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	"C" = 5/9*(F - 32)
	print("C")

else:
	F = "F = 9/5*(C + 32)"
	print(F)
	
	
	


	 




-- ERROR:
File "XXXX", line 4
    "C" = 5/9*(F - 32)
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:28:04) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = 5/9*(F - 32)
	print("C")

else:
	F = "F = 9/5*(C + 32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:28:19) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = 5/9*(F - 32)
	print("C")

else:
	F = "F = 9/5*(C + 32)"
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:29:00) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = 5/9*(F - 32)
	print("C")

else:
	F = F = 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:29:00) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = 5/9*(F - 32)
	print("C")

else:
	F = F = 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:31:30) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = 5/9*(F - 32)
	print("C")

else:
	F = F = 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:32:05) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C" ):
	C = 5/9*(F - 32)
	print("C")

else:
	F = F = 9/5*("C" + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:33:19) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C = 5/9*(F - 32)
	print("C")

else:
	F = F = 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:33:50) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C = 5/9*(F - 32)
	print("C")

else:
	F = F = 9/5*(C + 32)
	print("F")
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:34:59) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	"C" = 5/9*(F - 32)
	print(C)

else:
	F = F = 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
File "XXXX", line 4
    "C" = 5/9*(F - 32)
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:35:18) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	("C" = 5/9*(F - 32)
	print(C)

else:
	F = F = 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
File "XXXX", line 4
    ("C" = 5/9*(F - 32)
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:36:14) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C = ("C" = 5/9*(F - 32))
	print(C)

else:
	F = F = 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
File "XXXX", line 4
    C = ("C" = 5/9*(F - 32))
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:36:36) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(C)

else:
	F = F = 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C == 5/9*(F - 32)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:36:48) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(C)

else:
	F == 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C == 5/9*(F - 32)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:37:20) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(C)

else (opcao == "F")
	F == 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else (opcao == "F")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:37:36) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(C)

else (opcao == "F"):
	F == 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else (opcao == "F"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:37:45) 
-- CODE:
opcao = input("C / F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(C)

else:
	F == 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C == 5/9*(F - 32)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:38:05) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(C)

else:
	F == 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C == 5/9*(F - 32)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:38:14) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(C)

else:
	F == 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C == 5/9*(F - 32)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:39:20) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == C):
	C == 5/9*(F - 32)
	print(C)

else:
	F == 9/5*(C + 32)
	print(F)
	
	
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (opcao == C):
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:51:10) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == C):
	C == 5/9*(F - 32)
	print(round(C,2)

else:
	F == 9/5*(C + 32)
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:51:24) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == C):
	C == 5/9*(F - 32)
	print(round(C,2)

else:
	F == 9/5*(C + 32)
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:51:29) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == C):
	C == 5/9*(F - 32)
	print(round(C,2)

else :
	F == 9/5*(C + 32)
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:51:47) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == C):
	C == 5/9*(F - 32)
	print(round(C,2)

else:
	F == 9/5*(C + 32)
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:52:30) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == C):
	C == 5/9*(F - 32)
	print(round(C,2)

else:
	F == 9/5*(C + 32)
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:52:36) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == C):
	C == 5/9*(F - 32)
	print(round(C,2)

else
	F == 9/5*(C + 32)
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 15:52:41) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == C):
	C == 5/9*(F - 32)
	print(round(C,2)

else:
	F == 9/5*(C + 32)
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:36:23) 
-- CODE:
opcao = input("C / F ?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)

else:
	F == 9/5*C+32
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:37:10) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)

else:
	F == 9/5*C+32
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:37:18) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)

 else:
	F == 9/5*C+32
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:38:04) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)

 else:
	F == 9/5*C+32
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:38:24) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)

else:
	F == 9/5*C+32
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:39:40) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)

else:
			F == 9/5*C+32
	print(round(F,2)
	
	
	


	 




-- ERROR:
File "XXXX", line 7
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:40:22) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)
else:
			F == 9/5 * C + 32
	


	 




-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:40:48) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)
else :
	F == 9/5*C + 32
	


	 




-- ERROR:
File "XXXX", line 6
    else :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:41:25) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)
else :
	F == 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:04:08) 
-- CODE:
opcao = input("C/F?")
temperatura = input(" Digite a temperatura ")
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)
else :
	F == 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:05:26) 
-- CODE:
opcao = input("C/F?")
temperatura = input(" Digite a temperatura ")
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)
else :
	F == 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:08:26) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)
else :
	F == 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:08:30) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C == 5/9*(F - 32)
	print(round(C,2)
else:
	F == 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:15:12) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C = 5/9*(F - 32)
	print(round(C,2)
else:
	F = 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:15:27) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C = 5/9*(F - 32)
	print(round(C,2)
else:
	F = 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:15:40) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C = 5/9*(F - 32)
	print(round(C,2)
else:
	F = 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:17:23) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C = 5/9*(F - 32)
	print(round(C,2)
else:
	F = 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:17:54) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C = 5/9*(F - 32)
	print(round(C,2)
			else:
	F = 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 22:18:11) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C = 5/9*(F - 32)
	print(round(C,2)
else:
	F = 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
File "XXXX", line 6
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:24:39) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "C"):
	C = 5/9*(F - 32)
	print(round(C,2))
else:
	F = 9/5*C + 32
	print(round(F,2))
	


	 




-- EXECUTION TIME:
0.150764
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:26:58) 
-- CODE:
opcao = input("C/F?")
if (opcao == "C"):
	temperatura = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(C,2))
else:
	temperatura = float(input(" Digite a temperatura "))
	F = 9/5*C + 32
	print(round(F,2))
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = 5/9*(F - 32)
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:28:47) 
-- CODE:
opcao = input("C/F?")
if (opcao == "C"):
	temperatura = float(input(" Digite a temperatura "))
	C = (5*F - 32)/9
	print(round(C,2))
else:
	temperatura = float(input(" Digite a temperatura "))
	F = (9*C + 32)/5
	print(round(F,2))
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    C = (5*F - 32)/9
NameError: name 'F' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:30:11) 
-- CODE:
opcao = input("C/F?")
if (opcao == "F"):
	temperatura = float(input(" Digite a temperatura "))
	C = (5*F - 32)/9
	print(round(C,2))
else:
	temperatura = float(input(" Digite a temperatura "))
	F = (9*C + 32)/5
	print(round(F,2))
	


	 




-- EXECUTION TIME:
0.125338
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 8, in <module>
    F = (9*C + 32)/5
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:33:22) 
-- CODE:
opcao = input("C/F?")
if (opcao == "F"):
	temperatura = float(input(" Digite a temperatura "))
	C = (5/9)*(F - 32)
	print(round(C,2))
else:
	temperatura = float(input(" Digite a temperatura "))
	F = (9/5) * (C+32)
	print(round(F,2))
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    F = (9/5) * (C+32)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:33:34) 
-- CODE:
opcao = input("C/F?")
if (opcao == "F"):
	temperatura = float(input(" Digite a temperatura "))
	C = (5/9)*(F - 32)
	print(round(C,2))
else:
	temperatura = float(input(" Digite a temperatura "))
	F = (9/5) * (C+32)
	print(round(F,2))
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    F = (9/5) * (C+32)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:39:12) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "F"):
	C = (5/9)*(F - 32)
	print(round(C,2))
else:
	F = (9/5) * (C+32)
	print(round(F,2))
	


	 




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    F = (9/5) * (C+32)
NameError: name 'C' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:39:45) 
-- CODE:
opcao = input("C/F?")
temperatura = float(input(" Digite a temperatura "))
if (opcao == "F"):
	C = 5/9*(F - 32)
	print(round(C,2))
else:
	F = 9/5 * (C+32)
	print(round(F,2))
	


	 




-- EXECUTION TIME:
0.176795
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 7, in <module>
    F = 9/5 * (C+32)
NameError: name 'C' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:41:14) 
-- CODE:
opcao = input("C/F?")
if (opcao == "F"):
	F = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(C,2))
else:
	C = float(input(" Digite a temperatura "))
	F = 9/5 * (C+32)
	print(round(F,2))
	


	 




-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:41:22) 
-- CODE:
opcao = input("C/F?")
if (opcao == "F"):
	F = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(C,2))
else:
	C = float(input(" Digite a temperatura "))
	F = 9/5 * (C+32)
	print(round(F,2))
	


	 




-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:41:31) 
-- CODE:
opcao = input("C/F?")
if (opcao == "F"):
	F = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(C,2))
else:
	C = float(input(" Digite a temperatura "))
	F = 9/5 * (C+32)
	print(round(F,2))
	


	 




-- EXECUTION TIME:
0.187383
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:45:23) 
-- CODE:
opcao = input("C/F?")
if (opcao == "C"):
	C = float(input(" Digite a temperatura "))
	F = 9/5 * (C+32)
	print(round(C,2))
else:
	F = float(input(" Digite a temperatura "))
   C = 5/9*(F - 32)
	print(round(F,2))
	


	 



-- ERROR:
File "XXXX", line 8
    C = 5/9*(F - 32)
                   ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:45:47) 
-- CODE:
opcao = input("C/F?")
if (opcao == "C"):
	C = float(input(" Digite a temperatura "))
	F = 9/5 * (C+32)
	print(round(C,2))
else:
	F = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(F,2))
	


	 



-- OUTPUT:
320.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:46:32) 
-- CODE:
opcao = input("C/F?")
if (opcao == "C"):
	C = float(input(" Digite a temperatura "))
	F = 9/5 * (C+32)
	print(round(F,2))
else:
	F = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(C,2))
	


	 



-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:46:43) 
-- CODE:
opcao = input("C/F?")
if (opcao == "C"):
	C = float(input(" Digite a temperatura "))
	F = 9/5 * (C+32)
	print(round(F,2))
else:
	F = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(C,2))
	


	 



-- EXECUTION TIME:
0.129697
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
633.6
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
57.6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:46:53) 
-- CODE:
opcao = input("C/F?")
if (opcao == "C"):
	C = float(input(" Digite a temperatura "))
	F = 9/5 * (C+32)
	print(round(F,2))
else:
	F = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(C,2))
	


	 



-- OUTPUT:
633.6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:47:44) 
-- CODE:
opcao = input("C/F?")
if (opcao == "C"):
	C = float(input(" Digite a temperatura "))
	F = (9/5)*C +32
	print(round(F,2))
else:
	F = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(C,2))
	


	 



-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:47:50) 
-- CODE:
opcao = input("C/F?")
if (opcao == "C"):
	C = float(input(" Digite a temperatura "))
	F = (9/5)*C +32
	print(round(F,2))
else:
	F = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(C,2))
	


	 



-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:47:56) 
-- CODE:
opcao = input("C/F?")
if (opcao == "C"):
	C = float(input(" Digite a temperatura "))
	F = (9/5)*C +32
	print(round(F,2))
else:
	F = float(input(" Digite a temperatura "))
	C = 5/9*(F - 32)
	print(round(C,2))
	


	 



-- EXECUTION TIME:
0.150999
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
